--- a/sermons.html
+++ b/sermons.html
@@ -2,13 +2,13 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en"> <!--<![endif]-->    
+<!--[if gt IE 8]><!--> <html lang="pl-PL"> <!--<![endif]-->    
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 
-        <title>Church of the Passover Angel</title>
+        <title>Kościół Anioła Paschalnego</title>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous" />
 
@@ -35,26 +35,26 @@
                 <div class="container">
                     <a href="#" class="branding">
                         <img src="images/angel.png" alt="" class="logo">
-                        <h1 class="site-title">Church of the Passover Angel</h1>
+                        <h1 class="site-title">Kościół Anioła Paschalnego</h1>
                     </a>
 
                     <div class="main-navigation">
                         <button class="menu-toggle"><i class="fa fa-bars"></i> Menu</button>
                         <ul class="menu">
                             <li class="menu-item">
-                                <a href="index.html">Homepage <small>Lorem ipsum</small></a>
+                                <a href="index.html">Strona Główna <small>Start</small></a>
                             </li>
                             <li class="menu-item">
-                                <a href="about.html">About Us <small>About Our Church</small></a>
+                                <a href="about.html">O Nas <small>O Kościele</small></a>
                             </li>
                             <li class="menu-item current-menu-item">
-                                <a href="sermons.html">Sermons <small>Words From On High</small></a>
+                                <a href="sermons.html">Nauczania <small>Słowo z Góry</small></a>
                             </li>
                             <li class="menu-item">
-                                <a href="book.html">The Book <small>Donate Today</small></a>
+                                <a href="book.html">Księga Słowa <small>Złóż datek</small></a>
                             </li>
                             <li class="menu-item">
-                                <a href="#contact">Contact <small>We Want To Hear From You</small></a>
+                                <a href="#contact">Kontakt <small>Napisz do Nas</small></a>
                             </li>
                         </ul>
                     </div>
@@ -66,7 +66,7 @@
             <main class="main-content">
                 <div class="fullwidth-block">
                     <div class="container">
-                        <h2 class="section-title text-center">Sermons From Reverend Balfour</h2>
+                        <h2 class="section-title text-center">Nauczania o. Jana Balfora</h2>
 
                         <div class="row">
                             <div class="col-md-12 col-sm-6">
@@ -75,7 +75,7 @@
 										<div class="panel-heading" role="tab" id="headingOne">
 								      		<h4 class="panel-title text-center">
 									        	<a role="button" data-toggle="collapse" data-parent="#accordion" name="sermonOne" href="#sermonOne" aria-expanded="true" aria-controls="sermonOne">
-									          		The Sun Darkens - 14 aug <span class="year-0"></span>
+									          		Nastanie Ciemności - 14 kwietnia <span class="year-0"></span>
 									        	</a>
 								      		</h4>
 								    	</div>
@@ -86,36 +86,36 @@
 												<p>Striving to get the very important truly timely sign in the heavens.</p>
 
 												<p>
-												<i>Isaiah 13:10</i><br>
-												The stars of heaven and their constellations will not show their light.<br>
-												The rising sun will be darkened and the moon will not give its light.
+												<i>Księga Izajasza 13:10</i><br>
+												Bo gwiazdy niebieskie i Orion nie będą jaśniały swym światłem,<br>
+												słońce się zaćmi od samego wschodu, i swoim blaskiem księżyc nie zaświeci.
 												</p>
 
 												<p>
-												<i>Joel 3:15</i><br>
-												The sun and moon will be darkened, and the stars no longer shine.
+												<i>Księga Joela 3:4</i><br>
+												Słońce zmieni się w ciemność, a księżyc w krew,<br>
+												gdy przyjdzie dzień Pański, dzień wielki i straszny.
 												</p>
 
 												<p>
-												<i>Matthew 24:29</i><br>
-												Immediately after the tribulation of those days shall the sun be darkened<br>
-												and the moon shall not give her light, and the moon will not give its light; <br>
-												the stars will fall from the sky, and the heavenly bodies will be shaken.
+												<i>Ewangelia św. Mateusza 24:29</i><br>
+												Zaraz też po ucisku owych dni słońce się zaćmi i księżyc nie da swego blasku;<br>
+												gwiazdy zaczną padać z nieba i moce niebios zostaną wstrząśnięte
 												</p>
 
 												<p>
-												<i>Mark 13:24</i><br>
-												But in those days, after that tribulation, the sun shall be darkened, and the moon shall not give her light, 
+												<i>Ewangelia św. Marka 13:24</i><br>
+												W owe dni, po tym ucisku, słońce się zaćmi i księżyc nie da swego blasku. 
 												</p>
 
-												<p>Notice when this event is said to occur in the bible - in the Tribulation of those days. Truly we are in or coming to the fullness of the tribulation that will prepare the elect for the great tribulation!</p>
-												<p>We gather here to witness this great event, like God's own hand moving across the clouds.  It is a great biblical sign from the heavens that the time is nigh.</p>
-												<p>Will you strive to come for the weekend and join us together for the looking up the nearness of our redemption so very near. A good time for us to make ready for His return.</p>
-												<p>Be sure to attend Reverend Balfour's Sunday sermon - we have a great announcement to make about the arrival of the Passover Angel.</p>
-												<p>We are blessed to be seeing the imminent coming of the Lord's Angel in our time!</p>
+												<p>Zauważ, kiedy to wydarzenie ma miejsce w Biblii - w Ucisku tamtych dni. Naprawdę zbliżamy się do pełni czasu, który przygotuje Wybranych na wielki ucisk!</p>
+												<p>Zbieramy się tutaj, aby być świadkami tego wielkiego wydarzenia, gry ręka samego Boga czyni znak z niebios, że czas jest bliski.</p>
+												<p>Czy jesteś gotów dołączyć do nas w weekend, aby wspólnie wypatrywać bliskości naszego odkupienia? To dobry czas, abyśmy przygotowali się na Jego powrót.</p>
+												<p>Weź udział w niedzielnym kazaniu pastora Balfora - mamy do przekazania wspaniałą zapowiedź na temat przybycia Anioła Paschy.</p>
+												<p>Jesteśmy błogosławieni, mogąc widzieć rychłe przyjście Anioła Pańskiego w naszych czasach!</p>
 												<p class="text-center">
 													<img src="images/stellarium-014.png"><br>
-													This is not a coincidence! It is a sign! The Angel comes!
+													To nie przypadek, a Znak! On nadchodzi!
 												</p>
 								      		</div>
 								    	</div>
@@ -124,7 +124,7 @@
 								    	<div class="panel-heading" role="tab" id="headingTwo">
 								      		<h4 class="panel-title text-center">
 								        		<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" name="sermonTwo" href="#sermonTwo" aria-expanded="false" aria-controls="sermonTwo">
-								          			Satan’s Control of U.S. Government - 24 mar <span class="year-0"></span>
+								          			Rząd Szatana niszczy Polskę - 24 mar <span class="year-0"></span>
 								        		</a>
 								      		</h4>
 								    	</div>
