--- a/sermons.html
+++ b/sermons.html
@@ -107,7 +107,7 @@
 												<i>Ewangelia św. Marka 13:24</i><br>
 												W owe dni, po tym ucisku, słońce się zaćmi i księżyc nie da swego blasku. 
 												</p>
-
+												<br><br>
 												<p>Zauważ, kiedy to wydarzenie ma miejsce w Biblii - w Ucisku tamtych dni. Naprawdę zbliżamy się do pełni czasu, który przygotuje Wybranych na wielki ucisk!</p>
 												<p>Zbieramy się tutaj, aby być świadkami tego wielkiego wydarzenia, gry ręka samego Boga czyni znak z niebios, że czas jest bliski.</p>
 												<p>Czy jesteś gotów dołączyć do nas w weekend, aby wspólnie wypatrywać bliskości naszego odkupienia? To dobry czas, abyśmy przygotowali się na Jego powrót.</p>
@@ -115,7 +115,7 @@
 												<p>Jesteśmy błogosławieni, mogąc widzieć rychłe przyjście Anioła Pańskiego w naszych czasach!</p>
 												<p class="text-center">
 													<img src="images/stellarium-014.png"><br>
-													To nie przypadek, a Znak! On nadchodzi!
+													<br>To nie przypadek, a Znak! On nadchodzi!
 												</p>
 								      		</div>
 								    	</div>
@@ -131,7 +131,8 @@
 								    	<div id="sermonTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 									      	<div class="panel-body">
 									      		<!-- Original Source: http://www.alamoministries.com/content/english/Antichrist/jesus_said.html -->
-									      		<p>How close are we to Christ’s coming back to earth again? How close are we to the satanic church government control?</p>
+									      		<h3>Wersja Angielska:</h3>
+											<p>How close are we to Christ’s coming back to earth again? How close are we to the satanic church government control?</p>
 
 												<p>It has been reported to us that a group of Texas Christians questioned the Attorney General of Texas (Jim Mattox) May 19,1986, “Is it true that the State of Texas owns our children?”
 												<p>Texas Attorney General Mattox replied, “Yes, it’s true (that the state owns your children) and not only your children but you too!”</p>
@@ -233,7 +234,7 @@
 								    	<div class="panel-heading" role="tab" id="headingThree">
 								      		<h4 class="panel-title text-center">
 								        		<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" name="sermonThree" href="#sermonThree" aria-expanded="false" aria-controls="sermonThree">
-								          			Angels of Vengeance - 01 jan <span class="year-0"></span>
+								          			Anioł Zemsty - 01 STY <span class="year-0"></span>
 								        		</a>
 								      		</h4>
 								    	</div>
@@ -247,6 +248,7 @@
 
 												    https://books.google.com/books?id=I5xhAAAAcAAJ&lpg=PA263&dq=avenging%20angel%20sermon&pg=PA263#v=onepage&q&f=false
 												-->
+												<h3>Wersja Angielska:</h3>
 												<p>We are told that, after the Work of the creation was finished, "God saw every thing that he made, and behold it was _very good_." (Genesis i. 31.) How their nature came to be perverted and depraved; by what particular offence they incurred the displeasure of the Almighty; or how long they continued in their primitive state of innocence before they fell, we are not informed. If we adopt a prevailing opinion, that they were incited to rebellion through envy to mankind there can be no great interval between the date of their fall and that of the Creation.</p>
 
 												<p>But though we do not know what was their specific crime, yet we are assured in general terms, that "they sinned, and kept not their first estate, but left their own habitation;" (2 Peter ii 4; and Jude, verse 6) and so, from the most glorious and blessed, became the most abject and miserable of creatures. From this time it is believed that, instead of being employed in praising their Creator, and seconding his benevolent designs, they acted in direct opposition to him, and entertained the most rancorous hatred to mankind. Hence it was that the Jews attributed to the action of Evil Spirits, not onlly many disasters and calamities but also certain diseases of the human body, as epilepsy, insanity, etc. (See Lightfoot on Luke xiii. 11.) Whether our Saviour speaks in conformity with these ideas of the Jews in various cases of Dispossession, and particularly in the remarkable case of Mary Magdalen, (mentioned Mark xvi. 9, and Luke viii. 2,) has been much disputed. (see Lardner, Vol i. p. 474 and Vol. xi p. 253)</p>
@@ -273,7 +275,7 @@
 								    	<div class="panel-heading" role="tab" id="headingFour">
 								      		<h4 class="panel-title text-center">
 								        		<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" name="sermonFour" href="#sermonFour" aria-expanded="false" aria-controls="sermonFour">
-								          			New World Disorder - 25 jul <span class="year-1"></span>
+								          			Nieporządek Nowego Świata - 25 CZE <span class="year-1"></span>
 								        		</a>
 								      		</h4>
 								    	</div>
@@ -281,7 +283,8 @@
 								      		<div class="panel-body">
 								        		<!-- Origina Source: http://www.thepropheticyears.com/wordpress/new-world-disorder-will-bring-riots-and-civil-insurrections-even-here.html -->
 
-												<p>The world is going into a new world order of disorder. On one side you have the tyrannical power elite with all the money and weapons and on the other side you have the oppressed, the Marxist’s and the Islamist’s. No matter which of these end up in power the outcome will be the attempted destruction of the opposition. I think the world is heading into a great time of disorder. What you have been seeing so far is in the Middle East and North Africa is just act one of a long drama.</p>
+												<h3>Wersja Angielska:</h3>
+											<p>The world is going into a new world order of disorder. On one side you have the tyrannical power elite with all the money and weapons and on the other side you have the oppressed, the Marxist’s and the Islamist’s. No matter which of these end up in power the outcome will be the attempted destruction of the opposition. I think the world is heading into a great time of disorder. What you have been seeing so far is in the Middle East and North Africa is just act one of a long drama.</p>
 
 												<p>Even if many of these nations now in turmoil somehow achieve Democracy, that Democracy will just become a tyranny of the majority with the majority imposing Islamic law, Socialism or Fascism on everyone. So I am afraid that there will be no happy ending to the insurrections that we are now starting to see take place all over the world.</p>
 
@@ -319,12 +322,13 @@
 								    	<div class="panel-heading" role="tab" id="headingFive">
 								      		<h4 class="panel-title text-center">
 								        		<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" name="sermonFive" href="#sermonFive" aria-expanded="false" aria-controls="sermonFive">
-								          			The Judge is At the Door - 09 nov <span class="year-2"></span>
+								          			Sędzia jest u drzwi - 09 LIS <span class="year-2"></span>
 								        		</a>
 								      		</h4>
 								    	</div>
 								    	<div id="sermonFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
 								      		<div class="panel-body">
+											<h3>Wersja Angielska:</h3>
 								        		<p>
 												    And he said, Take now thy son, thine only son Isaac, whom thou lovest, and get thee into the land of Moriah; and offer him there for a burnt offering upon one of the mountains which I will tell thee of. <i>Genesis 22:2</i>
 												</p>
@@ -347,7 +351,7 @@
 								    	<div class="panel-heading" role="tab" id="headingSix">
 								      		<h4 class="panel-title text-center">
 								        		<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" name="sermonSix" href="#sermonSix" aria-expanded="false" aria-controls="sermonSix">
-								          			Annointed By God - 22 jan <span class="year-3"></span>
+								          			Naznaczeni przez Pana - 22 STY <span class="year-3"></span>
 								        		</a>
 								      		</h4>
 								    	</div>
@@ -359,7 +363,7 @@
 													By Evang. G. E. McTyre, Evangelist Evang. G. E., BHG McTyre BA
 
 													https://books.google.com/books?id=KWZ5GGXo_EMC&lpg=PA340&dq=religious%20right%20sermons&pg=PA340#v=onepage&q&f=false
-												-->
+												--><h3>Wersja Angielska:</h3>
 
 												<p>There are two you's. One is the flesh, and the other is the spirit. The flesh you, is on the left side, while the spirit you, is on the right. The two, are each battling for the highest position on their respective sides, and if one gets what it wants, then that puts the other, at its lowest point.</p>
 
@@ -425,17 +429,18 @@
 								    	<div class="panel-heading" role="tab" id="headingSeven">
 								      		<h4 class="panel-title text-center">
 								        		<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" name="sermonSeven" href="#sermonSeven" aria-expanded="false" aria-controls="sermonSeven">
-								          			The Time Has Come! - 26 jun <span class="year-5"></span>
+								          			CZAS NADSZEDŁ! - 6 KWIE <span class="year-5"></span>
 								        		</a>
 								      		</h4>
 								    	</div>
 								    	<div id="sermonSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
 								      		<div class="panel-body">
-								        		<p>The end is come. Behold, it is come!</p>
+								        		<p>Koniec jest blisk!</p>
 
-								        		<p>It is quite clear to us now. We have seen in the stars that the Angel is near.</p>
+								        		<p>Już wszystko zostało objawione. Gwiazda Anioła ukazała się nam</p>
 
-								        		<p>Do read carefully… Directed by the Lord through his servant, the Passover Angel, I have seen the signs. I am very urgently calling a solemn assembly for God's chosen gather in our Chapel to witness the coming of the Lord's Wrath, the beginning of the Rapture, and the erasure of Sin from the Earth.  A gathering in Spirit and Power. Asking all that read these words will pray as to the Father’s will for your salvation.  The time is coming soon, so prepare yourselves, mark your doorposts, save your firstborn from God's Holy Wrath as visited upon as as the God's Angel descends upon the Black Wind to slay all sinners.</p>
+								        		<p>Czytaj uważnie... Kierowany przez Pana poprzez swego sługę, Anioła Paschy, widziałem znaki. Bardzo pilnie zwołuję uroczyste zgromadzenie dla wybranych przez Boga. Zgromadźmy się w naszej Kaplicy, abyśmy byli świadkami nadejścia Gniewu Pańskiego, początku Rozłamu i wymazania Grzechu z ziemi. Zgromadźmy się w Duchu i Mocy.
+												Proszę wszystkich, którzy czytają te słowa - módlcie się o wolę Ojca dla waszego zbawienia. Pascha nadchodzi, więc przygotujcie się, zaznaczcie odrzwia, uratujcie swoich pierworodnych przed Świętym Gniewem Bożym. Anioł Boży zstąpi ponownie i przejdzie domami ludu Złego, aby zabić wszystkich grzeszników.</p>
 								        		<p>
 								        			<img src="images/Mark_Doorposts.png">
 								        		</p>
@@ -454,26 +459,25 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="widget">
-                                <h3 class="widget-title">Our address</h3>
-                                <p>There is but one Church in which men find salvation, just as outside the ark of Noah it was not possible for anyone to be saved. (Thomas Aquinas)</p>
+                                <h3 class="widget-title">Nasz Adres</h3>
+                                <p>Ponieważ nie ma zbawienia bez Chrystusa, a my nie poznajemy Chrystusa bez Kościoła, oznacza to, że nie ma zbawienia bez Kościoła. (Tomasz z Akwinu)</p>
                                 <ul class="address">
-                                    <li><i class="fa fa-map-marker"></i> 1313 Mockingbird Ln, Cleveland, OH 44106</li>
-                                    <li><i class="fa fa-phone"></i> (216) 555 0180</li>
-                                    <li><i class="fa fa-envelope"></i> info@passoverangel.com</li>
+                                    <li><i class="fa fa-map-marker"></i> Matemblewska 44B, Gdańsk 80-294, Polska</li>
+                                    <li><i class="fa fa-envelope"></i> kontakt@kosciol.aniolpaschalny.pl</li>
                                 </ul>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="widget text-center">
-                                <h2 class="widget-title">Free Gift With Donation!</h2>
+                                <h2 class="widget-title">Podarunek za każdy datek!</h2>
                                 <a href="book.html"><img src="images/book_thumb.png"></a>
-                                <p><strong>$29.95</strong></p>
+                                <p><strong>40.99zł</strong></p>
                                 <img src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/btn_donate_cc_147x47.png" alt="Donate">
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="widget">
-                                <h3 class="widget-title"><a name="contact">Contact form</a></h3>
+                                <h3 class="widget-title"><a name="contact">Formularz kontaktowy</a></h3>
                                 <form action="#" class="contact-form">
                                     <div class="row">
                                         <div class="col-md-6"><input type="text" placeholder="Your name..."></div>
