--- a/sermons.html
+++ b/sermons.html
@@ -213,7 +213,7 @@
 								    	<div class="panel-heading" role="tab" id="headingSix">
 								      		<h4 class="panel-title text-center">
 								        		<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" name="sermonSix" href="#sermonSix" aria-expanded="false" aria-controls="sermonSix">
-								          			Naznaczeni przez Pana - 22 STY <span class="year-3"></span>
+								          			Naznaczeni przez Pana - 22 PAŹ <span class="year-3"></span>
 								        		</a>
 								      		</h4>
 								    	</div>
@@ -233,51 +233,11 @@
 
 												<p>But, you see, to God, a person that seeks to get as close to Him as they can, gets blessed more than the one that seeks to stay neutral. And besdies that, the one that stays neutral, might just as well not be trying to be pleasing in His sight, because he is not really committing himself to God, all because he wants that friendship with the world.</p>
 
-												<p>As I look around, and see what some peopl ethat claim to be Christians are doing, it is obvious that they think they are doing what God wants them to do, by not being, as some people have said, 'too holy to be any earthly good.'</p>
-
-												<p>So they sit in the middle. They don't go to church, and they hang out in the bars. The sing in the choir, and sing for the world. They take the Lord's Supper, then they engage in ungodly activities. All because they want that feeling of being liked by the ungodly.</p>
-
-												<p>Throughout His ministry, Jesus achieved everything that God sent Him there to do by putting the Father, and His Will, above all other things, including His own Life.</p>
-
-												<p>Jesus loved the ungodly, because those are who He came here for. But He didn't partake in their activities, and try to make Himself look good in their sight, so they would accept Him in their midst.</p>
-
-												<p>What He did do was show them that He was a true friend to them, even though He remained pure in God's sight.</p>
-
 												<p>You see, the world is lost. They are seeking to make them feel fulfilled. That is why they drink. That is why they do drugs. That is why they involve themselves in all sorts of sexual sin. That is why they lie, steal and gamble. They are looking for satisfaction, and some sense of peace of mind.</p>
-
-												<p>When a Christian, who is supposed to have the answer to their problems, starts indulging in the things they do, it says to them 'the God I serve is not sufficient enough for me. I still need what you have.' And that is making God appear to be less than what He is, and that is, 'One that can supply all of your needs, according to His riches in Glory.'</p>
-
-												<p>Why should they leave what they are doing, to follow a God, that can't even satisfy you enough to keep you from coming back to them for pleasure?</p>
-
-												<p>What made many seek Jesus out was that He had something that they needed. When they were sick, they sought Him out for healing. When they were depressed, they sought Him out for deliverance. When they had tried everything they could, and nothing worked, they sought Him out. And He met their needs. That is waht the true Christian is supposed to show the world.</p>
-
-												<p>Jesus said, 'Mark 16:17 And these signs shall follow them that believe; In my name shall they cast out devils; they shall speak with new tongues; Mark 16:18 They shall take up serpents; and if they drink any deadly thing, it shall not hurt them; they shall lay hands on the sick, and they shall recover.'</p>
 
 												<p>Jesus gave us power, 'Luke 10:19 Behold, I give unto you power to tread on serpents and scorpions, and over all the power of the enemy: and nothing shalll by any means hurt you' to accomplish things that the world needs to see and experience, to know that God is real.</p>
 
 												<p>We are the example to the ungodly, of who He is. And many of us are just dropping the ball.</p>
-
-												<p>And why is this? One word - preachers.</p>
-
-												<p>When I look at some of my fellow ministers, I have to shake my head, because what I see them doing, and hear them saying, tells me which side of the seesaw they are on, and which side they are trying to have lifted up, and in too many instances it is the left side.</p>
-
-												<p>Ministers are the ones that should be setting the example for those that are seeking God, to realize the fact that 'Lk 16:13 Ye cannot serve God and mammon.'</p>
-
-												<p>But, at every turn, they are out, playing up to them like children trying to please their parents. They go out to see what makes the world happy, and they bring it into the church.</p>
-
-												<p>The world likes certain types of music, so the church models its music after theirs. They they bring some of their (the world's) entertainers into the church and have them sing a few selections, which tells their members that they can be in the church, and sing for the world as well. How many artists that are popular with the ungodly came out of the church? I could name a hundred of them, at lleast, but I feel I don't have to because you already know most of them.</p>
-
-												<p>The world likes to gamble, so the church bring BINGO in, to give people something to do, as if they can't find something to do, without the church helping to corrupt them. So the members feel that they can go out and gamble at a casino, seeing that their church sponsors trips to Las Vegas, Atlantic City, and other venues of instant poverty.</p>
-
-												<p>To be popular with those in the seats of power, they throw their support behind politicians and groups that come up wiht ludicrous ideas to play to the whims of people, in order to be looked on favorably by them. These politicians and groups give them a little play, and they go around preaching the virtues of their (politicians and groups) views, forgetting all about the Word of God.</p>
-
-												<p>And you know what makes it worse? When they attack someone that is preaching the uncompromised word of God. All because they want to be approved of by the world. They want to shut him up because he is making them look bad.</p>
-
-												<p>Have you ever heard the term "religious right"? The religious right are those that are on the right side of the seesaw. They are the ones that are trying to be pleasing in the sight of God, and have mortified (or put into low regard) their popularity with the world.</p>
-
-												<p>Now, have you heard of the "religious left"? Probably not, because the world is in love with them, because they are their friends, They are the ones on the left side of the seesaw. They have left the paths of righteousness and even common sense. The world is going headlong towards destruction, and even many of them that are not even thinking about God know they are going in the wrong direction. Their (these preachers) goal is to be praised and rewarded by those that are the enemies of God.</p>
-
-												<p>When we have examples like this, no wonder we don't see any of the things Jesus said He has given us being manifested in their churches.</p>
 
 												<p>The bible says, 'Isa 10:27 And it shall come to pass in that day, that his burden shall be taken away from off thy shoulder, and his yoke from off thy neck, and the yoke shall be destroyed because of the anointing.' To put it more simply, if they are not annointed by God, then there is no power in them to break the yokes of bondage to sin and therefore no delilverance for the people.</p>
 
@@ -291,20 +251,21 @@
 								    	<div class="panel-heading" role="tab" id="headingSeven">
 								      		<h4 class="panel-title text-center">
 								        		<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" name="sermonSeven" href="#sermonSeven" aria-expanded="false" aria-controls="sermonSeven">
-								          			CZAS NADSZEDŁ! - 6 KWIE <span class="year-5"></span>
+								          			CZAS NADSZEDŁ! - 6 KWIE <span class="year-3"></span>
 								        		</a>
 								      		</h4>
 								    	</div>
 								    	<div id="sermonSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
 								      		<div class="panel-body">
-								        		<p>Koniec jest bliski! Sąd nadszedł</p>
+								        		<p>Koniec jest bliski! Sąd nadszedł!</p>
 
-								        		<p>Już wszystko zostało objawione. Gwiazda Anioła ukazała się an niebie</p>
-											<p>Nadchodzi Pascha, a z nią Przejście</p>
+								        		<p>Już wszystko zostało objawione. Gwiazda Anioła ukazała się na niebie.</p>
+											<p>Nadchodzi Pascha, a z nią Przejście.</p>
 								        		<p><br>Czytaj uważnie... Kierowany przez Pana poprzez swego sługę, Anioła Paschy, widziałem znaki. Bardzo pilnie zwołuję uroczyste zgromadzenie dla wybranych przez Boga. Zgromadźmy się w naszej Kaplicy, abyśmy byli świadkami nadejścia Gniewu Pańskiego, początku Rozłamu i wymazania Grzechu z ziemi. Zgromadźmy się w Duchu i Mocy.
 												Proszę wszystkich, którzy czytają te słowa - módlcie się o wolę Ojca dla waszego zbawienia. Pascha nadchodzi, więc przygotujcie się, zaznaczcie odrzwia, uratujcie swoich pierworodnych przed Świętym Gniewem Bożym. Anioł Boży zstąpi ponownie i przejdzie domami ludu Złego, aby zabić wszystkich grzeszników.</p>
 								        		<p>
 								        			<img src="images/Mark_Doorposts.png">
+												Anioł nadchodzi w Roku Pańskim 2022!
 								        		</p>
 								      		</div>
 								    	</div>
