--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 
-		<title>Church of the Passover Angel</title>
+		<title>Kościół Anioła Paschalnego</title>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous" />
 
@@ -35,29 +35,29 @@
 				<div class="container">
 					<a href="#" class="branding">
 						<img src="images/angel.png" alt="" class="logo">
-						<h1 class="site-title">Church of the Passover Angel</h1>
-					</a>
+						<h1 class="site-title">Kościół Anioła Paschalnego</h1>
+                    </a>
 
-					<div class="main-navigation">
-						<button class="menu-toggle"><i class="fa fa-bars"></i> Menu</button>
-						<ul class="menu">
-							<li class="menu-item current-menu-item">
-                                <a href="index.html">Homepage <small>Lorem ipsum</small></a>
+                    <div class="main-navigation">
+                        <button class="menu-toggle"><i class="fa fa-bars"></i> Menu</button>
+                        <ul class="menu">
+                            <li class="menu-item">
+                                <a href="index.html">Strona Główna <small>Start</small></a>
                             </li>
                             <li class="menu-item">
-                                <a href="about.html">About Us <small>About Our Church</small></a>
+                                <a href="about.html">O Kościele <small>Poznaj nas</small></a>
+                            </li>
+                            <li class="menu-item current-menu-item">
+                                <a href="sermons.html">Nauczania <small>Słowo z Góry</small></a>
                             </li>
                             <li class="menu-item">
-                                <a href="sermons.html">Sermons <small>Words From On High</small></a>
+                                <a href="book.html">Święte Słowo <small>Pismo Kościoła</small></a>
                             </li>
                             <li class="menu-item">
-                                <a href="book.html">The Book <small>Donate Today</small></a>
+                                <a href="#contact">Kontakt <small>Napisz do Nas</small></a>
                             </li>
-                            <li class="menu-item">
-                                <a href="#contact">Contact <small>We Want To Hear From You</small></a>
-                            </li>
-						</ul>
-					</div>
+                        </ul>
+                    </div>
 
 					<div class="mobile-navigation"></div>
 				</div>
@@ -65,36 +65,36 @@
 
             <div class="container">
                 <div class="clock fullwidth-block">
-                    <h1 class="text-center">The Angel Cometh!</h1>
+                    <h1 class="text-center">Anioł Pana nadchodzi!</h1>
                     <br>
                     <div class="countdown"></div>
                     <p class="news news-title text-center">
-                        For I will pass through the land of Egypt this night,<br>
-                        and will smite all the firstborn in the land of Egypt, both man and beast;<br>
-                        and against all the gods of Egypt I will execute judgment: <br>
-                        I <i>am</i> the LORD.
+                        Tej nocy przejdę przez Egipt,<br>
+			 zabiję wszystko pierworodne w ziemi egipskiej<br>
+			od człowieka aż do bydła i odbędę sąd nad wszystkimi bogami Egiptu<br>
+			    <b><Ja/b>, Pan.
                     </p>
-                    <h3 class="text-center">Now is the time to get right with God - before it's too late!</h3>
+                    <h3 class="text-center">To czas ostateczny! Pojednaj się z Panem, bo on jest sprawiedliwy!</h3>
                 </div>
             </div>
 
 			<main class="main-content">
 				<div class="fullwidth-block">
 					<div class="container">
-						<h2 class="section-title">Recent news</h2>
+						<h2 class="section-title">Aktualności</h2>
 
 						<div class="row">
 							<div class="col-md-3 col-sm-6">
 								<div class="news">
 									<image class="news-image" src="images/news-thumb-1.jpg"></image>
-									<h3 class="news-title"><a href="sermons.html#sermonOne">The Sun Darkens</a></h3>
-									<small class="date"><i class="fa fa-calendar"></i>14 aug <span class="year-0"></span></small>
+									<h3 class="news-title"><a href="sermons.html#sermonOne">Nastanie Ciemności</a></h3>
+									<small class="date"><i class="fa fa-calendar"></i>14 kwie <span class="year-0"></span></small>
 								</div>
 							</div>
 							<div class="col-md-3 col-sm-6">
 								<div class="news">
 									<image class="news-image" src="images/news-thumb-2.jpg"></image>
-									<h3 class="news-title"><a href="sermons.html#sermonTwo">Satan’s Control of U.S. Government</a></h3>
+									<h3 class="news-title"><a href="sermons.html#sermonTwo">Rząd Szatana niszczy Polskę</a></h3>
 									<small class="date"><i class="fa fa-calendar"></i>24 mar <span class="year-0"></span></small>
 								</div>
 							</div>
@@ -108,158 +108,53 @@
 							<div class="col-md-3 col-sm-6">
 								<div class="news">
 									<image class="news-image" src="images/news-thumb-4.jpg"></image>
-									<h3 class="news-title"><a href="sermons.html#sermonFour">New World Disorder</a></h3>
-									<small class="date"><i class="fa fa-calendar"></i>25 jul <span class="year-1"></span></small>
+									<h3 class="news-title"><a href="sermons.html#sermonFour">CZAS NADSZEDŁ!</a></h3>
+									<small class="date"><i class="fa fa-calendar"></i>6 kwie <span class="year-3"></span></small>
 								</div>
 							</div>
 						</div> <!-- .row -->
 					</div> <!-- .container -->
 				</div> <!-- section -->
-
-				<div class="fullwidth-block">
-					<div class="container">
-						<div class="row">
-							<div class="col-md-6">
-								<h2 class="section-title">Ways To Prepare</h2>
-								<ul class="event-list">
-									<li>
-										<a href="http://www.hardenedstructures.com/genesisseries.php">
-											<h3 class="event-title">Genesis Series Shelters</h3>
-											<span class="event-meta">
-												<span><i class="fa fa-calendar"></i>30 mar <span class="year-0"></span></span>
-											</span>
-										</a>
-									</li>
-									<li>
-										<a href="http://graywolfsurvival.com/95815/best-prepper-resources-and-recommendations-feb-2015/">
-											<h3 class="event-title">The Right Stuff</h3>
-											<span class="event-meta">
-												<span><i class="fa fa-calendar"></i>12 feb <span class="year-0"></span></span>
-											</span>
-										</a>
-									</li>
-									<li>
-										<a href="http://www.atlassurvivalshelters.com/">
-											<h3 class="event-title">Atlas Shelters</h3>
-											<span class="event-meta">
-												<span><i class="fa fa-calendar"></i>04 apr <span class="year-1"></span></span>
-											</span>
-										</a>
-									</li>
-									<li>
-										<a href="http://www.askaprepper.com/19-survival-skills-you-can-teach-your-children-this-summer/">
-											<h3 class="event-title">Prepare Your Kids</h3>
-											<span class="event-meta">
-												<span><i class="fa fa-calendar"></i>23 may <span class="year-2"></span></span>
-											</span>
-										</a>
-									</li>
-									<li>
-										<a href="http://tasteheavennow.net/why_repent/end_times.htm">
-											<h3 class="event-title">Repent Now!</h3>
-											<span class="event-meta">
-												<span><i class="fa fa-calendar"></i>01 jan <span class="year-3"></span></span>
-											</span>
-										</a>
-									</li>
-									<li>
-										<a href="https://www.whatchristianswanttoknow.com/list-of-the-ten-plagues-in-egypt-from-the-bible/">
-											<h3 class="event-title">Know What Is Coming</h3>
-											<span class="event-meta">
-												<span><i class="fa fa-calendar"></i>15 aug <span class="year-5"></span></span>
-											</span>
-										</a>
-									</li>
-								</ul>
-
-								<div class="text-center">
-									<a href="#" class="button">More Ways To Prepare</a>
-								</div>
-							</div>
-							<div class="col-md-6">
-								<h2 class="section-title">Previous sermons</h2>
-								<ul class="sermon-list">
-									<li>
-										<img src="images/small-thumb-1.jpg" alt="">
-										<div class="sermon-detail">
-											<h3 class="sermon-title"><a href="sermons.html#sermonFive">The Judge is At the Door</a></h3>
-											<div class="sermon-meta">
-												<div class="pastor"><i class="fa fa-user"></i> Reverend Balfour</div>
-												<div class="date"><i class="fa fa-calendar"></i> 09 nov <span class="year-2"></span></div>
-											</div>
-										</div>
-									</li>
-									<li>
-										<img src="images/small-thumb-2.jpg" alt="">
-										<div class="sermon-detail">
-											<h3 class="sermon-title"><a href="sermons.html#sermonSix">Annointed By God</a></h3>
-											<div class="sermon-meta">
-												<div class="pastor"><i class="fa fa-user"></i> Reverend Balfour</div>
-												<div class="date"><i class="fa fa-calendar"></i> 22 jan <span class="year-3"></span></div>
-											</div>
-										</div>
-									</li>
-									<li>
-										<img src="images/small-thumb-3.jpg" alt="">
-										<div class="sermon-detail">
-											<h3 class="sermon-title"><a href="sermons.html#sermonSeven">THE TIME HAS COME!</a></h3>
-											<div class="sermon-meta">
-												<div class="pastor"><i class="fa fa-user"></i> Reverend Balfour</div>
-												<div class="date"><i class="fa fa-calendar"></i>26 jun <span class="year-5"></span></div>
-											</div>
-										</div>
-									</li>
-								</ul>
-
-								<div class="text-center">
-									<a href="sermons.html" class="button">See all sermons</a>
-								</div>
-							</div>
-						</div> <!-- .row -->
-					</div> <!-- .container -->
-				</div> <!-- section -->
-			</main> <!-- .main-content -->
 
 			<footer class="site-footer">
-				<div class="container">
-					<div class="row">
-						<div class="col-md-4">
-							<div class="widget">
-								<h3 class="widget-title">Our address</h3>
-								<p>There is but one Church in which men find salvation, just as outside the ark of Noah it was not possible for anyone to be saved. (Thomas Aquinas)</p>
-								<ul class="address">
-									<li><i class="fa fa-map-marker"></i> 1313 Mockingbird Ln, Cleveland, OH 44106</li>
-									<li><i class="fa fa-phone"></i> (216) 555 0180</li>
-									<li><i class="fa fa-envelope"></i> info@passoverangel.com</li>
-								</ul>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="widget text-center">
-								<h2 class="widget-title">Free Gift With Donation!</h2>
-								<a href="book.html"><img src="images/book_thumb.png"></a>
-                                <p><strong>$29.95</strong></p>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="widget">
+                                <h3 class="widget-title">Nasz Adres</h3>
+                                <p>Ponieważ nie ma zbawienia bez Chrystusa,<br> a my nie poznajemy Chrystusa bez Kościoła, oznacza to,<br> że NIE MA ZBAWIENIA BEZ KOŚCIOŁA -Tomasz z Akwinu</p>
+                                <ul class="address">
+                                    <li><i class="fa fa-map-marker"></i> Matemblewska 44B, Gdańsk 80-294, Polska</li>
+                                    <li><i class="fa fa-envelope"></i> kontakt@kosciol.aniolpaschalny.pl</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="widget text-center">
+                                <h2 class="widget-title">Otrzymaj Orędzie Pana za skromny datek</h2>
+                                <a href="book.html"><img src="images/book_thumb.png"></a>
+                                <p><strong>40.99zł</strong></p>
                                 <img src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/btn_donate_cc_147x47.png" alt="Donate">
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="widget">
-								<h3 class="widget-title"><a name="contact">Contact form</a></h3>
-								<form action="#" class="contact-form">
-									<div class="row">
-										<div class="col-md-6"><input type="text" placeholder="Your name..."></div>
-										<div class="col-md-6"><input type="text" placeholder="Email..."></div>
-									</div>
-									<textarea name="" placeholder="Your message..."></textarea>
-									<div class="text-right"><input type="submit" value="Send message"></div>
-								</form>
-							</div>
-						</div>
-					</div> <!-- .row -->
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="widget">
+                                <h3 class="widget-title"><a name="contact">Formularz kontaktowy</a></h3>
+                                <form action="#" class="contact-form">
+                                    <div class="row">
+                                        <div class="col-md-6"><input type="text" placeholder="Your name..."></div>
+                                        <div class="col-md-6"><input type="text" placeholder="Email..."></div>
+                                    </div>
+                                    <textarea name="" placeholder="Your message..."></textarea>
+                                    <div class="text-right"><input type="submit" value="Send message"></div>
+                                </form>
+                            </div>
+                        </div>
+                    </div> <!-- .row -->
 
-					<p class="colophon">Copyright <span class="year-0"></span> Church of the Passover Angel. All right reserved</p>
-				</div><!-- .container -->
-			</footer> <!-- .site-footer -->
+                    <p class="colophon">Copyright <span class="year-0"></span> Kościoł Anioła Paschalnego. All right reserved</p>
+                </div><!-- .container -->
+            </footer> <!-- .site-footer -->
 
 		</div>
 
