--- a/about.html
+++ b/about.html
@@ -71,11 +71,11 @@
                         <div class="row">
                             <div class="col-md-12 col-sm-6">
                                 <div class="news">
-                                    <p>Jesteśmy małym, bezwyznaniowym, fundamentalistycznym Kościołem oddanym całkowitemu poddaniu się woli Boga i jego herolda, Anioła Paschy.
+                                    <p>Jesteśmy małym, fundamentalistycznym Kościołem oddanym całkowitemu poddaniu się woli Boga i jego herolda, Anioła Paschy. Nie należymy do określnoej denominacji, ponieważ naszym zwierzchnikiem jest sam Pan.
 
-<br><br>Wierzymy, że Czasy Ostateczne są bliskie. Wkrótce Bóg powróci na świat, poprzez swojego posłańca, Anioła Paschy, aby oczyścić świat z grzechu i przywrócić sprawiedliwość poprzez Porwanie.
+<br><br>Wierzymy, że Czasy Ostateczne są bliskie. Wkrótce Bóg powróci na świat, poprzez swojego posłańca, Anioła Paschy, aby oczyścić świat z grzechu i przywrócić sprawiedliwość.
 
-<br><br>Wiele kościołów powie ci, że Porwanie zostało przepowiedziane przez Jana w Księdze Objawienia, ale są oszukani. Tylko ci, którzy podążają za prawdziwymi słowami Anioła Bożego, zostaną odkupieni, więc wszyscy musimy pokutować, jeśli mamy nadzieję na zbawienie.
+<br>Wiele kościołów powie ci, że Powtórne Przyjście zostało przepowiedziane przez św. Jana w Księdze Apokalipsy, ale są w błędzie. Tylko ci, którzy podążają za prawdziwymi słowami Anioła Bożego, zostaną odkupieni, więc wszyscy musimy pokutować, jeśli mamy nadzieję na zbawienie.
 
 <br><br>Przekaż darowiznę na rzecz naszego Kościoła już teraz i otrzymaj Księgę Anioła Paschy, aby dowiedzieć się więcej. Odkup się teraz przed naszym Panem, zanim będzie za późno!
 
