--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         Tej nocy przejdę przez Egipt,<br>
 			 zabiję wszystko pierworodne w ziemi egipskiej<br>
 			od człowieka aż do bydła i odbędę sąd nad wszystkimi bogami Egiptu<br>
-			    <b><Ja/b>, Pan.
+			    <strong>Ja</strong>, Pan.
                     </p>
                     <h3 class="text-center">To czas ostateczny! Pojednaj się z Panem, bo on jest sprawiedliwy!</h3>
                 </div>
@@ -101,8 +101,8 @@
 							<div class="col-md-3 col-sm-6">
 								<div class="news">
 									<image class="news-image" src="images/news-thumb-3.jpg"></image>
-									<h3 class="news-title"><a href="sermons.html#sermonThree">Angels of Vengeance</a></h3>
-									<small class="date"><i class="fa fa-calendar"></i>01 jan <span class="year-0"></span></small>
+									<h3 class="news-title"><a href="sermons.html#sermonThree">Anioł Zemsty</a></h3>
+									<small class="date"><i class="fa fa-calendar"></i>01 sty <span class="year-0"></span></small>
 								</div>
 							</div>
 							<div class="col-md-3 col-sm-6">
