--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 							<div class="col-md-3 col-sm-6">
 								<div class="news">
 									<image class="news-image" src="images/news-thumb-4.jpg"></image>
-									<h3 class="news-title"><a href="sermons.html#sermonFour">CZAS NADSZEDŁ!</a></h3>
+									<h3 class="news-title"><a href="sermons.html#sermonFour">KONIEC NADSZEDŁ!</a></h3>
 									<small class="date"><i class="fa fa-calendar"></i>6 kwie <span class="year-3"></span></small>
 								</div>
 							</div>
@@ -122,7 +122,7 @@
                         <div class="col-md-4">
                             <div class="widget">
                                 <h3 class="widget-title">Nasz Adres</h3>
-                                <p>Ponieważ nie ma zbawienia bez Chrystusa,<br> a my nie poznajemy Chrystusa bez Kościoła, oznacza to,<br> że NIE MA ZBAWIENIA BEZ KOŚCIOŁA -Tomasz z Akwinu</p>
+                                <p>Ponieważ nie ma zbawienia bez Chrystusa,<br> a my nie poznajemy Chrystusa bez Kościoła,<br> oznacza to,<br> że NIE MA ZBAWIENIA BEZ KOŚCIOŁA -Tomasz z Akwinu</p>
                                 <ul class="address">
                                     <li><i class="fa fa-map-marker"></i> Matemblewska 44B, Gdańsk 80-294, Polska</li>
                                     <li><i class="fa fa-envelope"></i> kontakt@kosciol.aniolpaschalny.pl</li>
@@ -131,7 +131,7 @@
                         </div>
                         <div class="col-md-4">
                             <div class="widget text-center">
-                                <h2 class="widget-title">Otrzymaj Orędzie Pana za skromny datek</h2>
+                                <h2 class="widget-title">Otrzymaj Orędzie Pana<br> za skromny datek</h2>
                                 <a href="book.html"><img src="images/book_thumb.png"></a>
                                 <p><strong>40.99zł</strong></p>
                                 <img src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/btn_donate_cc_147x47.png" alt="Donate">
