--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <div class="col-md-4">
                             <div class="widget">
                                 <h3 class="widget-title">Nasz Adres</h3>
-                                <p>Ponieważ nie ma zbawienia bez Chrystusa,<br> a my nie poznajemy Chrystusa bez Kościoła,<br> oznacza to,<br> że NIE MA ZBAWIENIA BEZ KOŚCIOŁA -Tomasz z Akwinu</p>
+                                <p>Ponieważ nie ma zbawienia bez Chrystusa,<br> a my nie poznajemy Chrystusa bez Kościoła, oznacza to,<br> że NIE MA ZBAWIENIA BEZ KOŚCIOŁA -Tomasz z Akwinu</p>
                                 <ul class="address">
                                     <li><i class="fa fa-map-marker"></i> Matemblewska 44B, Gdańsk 80-294, Polska</li>
                                     <li><i class="fa fa-envelope"></i> kontakt@kosciol.aniolpaschalny.pl</li>
