--- a/about.html
+++ b/about.html
@@ -71,13 +71,13 @@
                         <div class="row">
                             <div class="col-md-12 col-sm-6">
                                 <div class="news">
-                                    <p>Jesteśmy małym, fundamentalistycznym Kościołem oddanym całkowitemu poddaniu się woli Boga i jego herolda, Anioła Paschy. Nie należymy do określnoej denominacji, ponieważ naszym zwierzchnikiem jest sam Pan.
+                                    <p>Jesteśmy małym, fundamentalistycznym Kościołem, oddanym całkowicie woli Boga i jego herolda, Anioła Paschy. Nie należymy do żadnej określnej denominacji, ponieważ naszym bezpośrednim zwierzchnikiem jest sam Pan.
 
-<br><br>Wierzymy, że Czasy Ostateczne są bliskie. Wkrótce Bóg powróci na świat, poprzez swojego posłańca, Anioła Paschy, aby oczyścić świat z grzechu i przywrócić sprawiedliwość.
+<br><br>Wierzymy, że Czasy Ostateczne są bliskie. Wkrótce Bóg powróci na świa poprzez swojego posłańca, Anioła Paschy, aby oczyścić świat z grzechu i przywrócić sprawiedliwość.
 
-<br>Wiele kościołów powie ci, że Powtórne Przyjście zostało przepowiedziane przez św. Jana w Księdze Apokalipsy, ale są w błędzie. Tylko ci, którzy podążają za prawdziwymi słowami Anioła Bożego, zostaną odkupieni, więc wszyscy musimy pokutować, jeśli mamy nadzieję na zbawienie.
+<br>Wiele kościołów powie ci, że Powtórne Przyjście zostało przepowiedziane przez św. Jana w Księdze Apokalipsy, ale są w błędzie. Tylko ci, którzy podążają za prawdziwymi Słowami Anioła Bożego, zostaną odkupieni. Wszyscy musimy pokutować, jeśli mamy nadzieję na zbawienie.
 
-<br><br>Przekaż darowiznę na rzecz naszego Kościoła już teraz i otrzymaj Księgę Anioła Paschy, aby dowiedzieć się więcej. Odkup się teraz przed naszym Panem, zanim będzie za późno!
+<br><br>Przekaż darowiznę na rzecz naszego Kościoła już teraz i otrzymaj Księgę Anioła Paschy, aby dowiedzieć się więcej. Pokutuj teraz przed naszym Panem, zanim będzie za późno!
 
 <br><br><i>„Nie chełp się jutrem, bo nie wiesz, co dzień przyniesie”</i> (Księga Przysłów 27:1)</p>
                                 </div>
@@ -102,7 +102,7 @@
                         </div>
                         <div class="col-md-4">
                             <div class="widget text-center">
-                                <h2 class="widget-title">Otrzymaj Orędzie Pana za skromny datek</h2>
+                                <h2 class="widget-title">Otrzymaj Orędzie Pana<br> za skromny datek</h2>
                                 <a href="book.html"><img src="images/book_thumb.png"></a>
                                 <p><strong>40.99zł</strong></p>
                                 <img src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/btn_donate_cc_147x47.png" alt="Donate">
