--- a/book.html
+++ b/book.html
@@ -8,7 +8,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 
-        <title>Church of the Passover Angel</title>
+        <title>Kościół Anioła Paschy</title>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous" />
 
@@ -35,30 +35,30 @@
                 <div class="container">
                     <a href="#" class="branding">
                         <img src="images/angel.png" alt="" class="logo">
-                        <h1 class="site-title">Church of the Passover Angel</h1>
+                        <h1 class="site-title">Kościół Anioła Paschalnego</h1>
                     </a>
 
                     <div class="main-navigation">
                         <button class="menu-toggle"><i class="fa fa-bars"></i> Menu</button>
                         <ul class="menu">
                             <li class="menu-item">
-                                <a href="index.html">Homepage <small>Lorem ipsum</small></a>
+                                <a href="index.html">Strona Główna <small>Start</small></a>
                             </li>
                             <li class="menu-item">
-                                <a href="about.html">About Us <small>About Our Church</small></a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="sermons.html">Sermons <small>Words From On High</small></a>
+                                <a href="about.html">O Kościele <small>Poznaj nas</small></a>
                             </li>
                             <li class="menu-item current-menu-item">
-                                <a href="book.html">The Book <small>Donate Today</small></a>
+                                <a href="sermons.html">Nauczania <small>Słowo z Góry</small></a>
                             </li>
                             <li class="menu-item">
-                                <a href="#contact">Contact <small>We Want To Hear From You</small></a>
+                                <a href="book.html">Święte Słowo <small>Pismo Kościoła</small></a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="#contact">Kontakt <small>Napisz do Nas</small></a>
                             </li>
                         </ul>
                     </div>
-
+                    
                     <div class="mobile-navigation"></div>
                 </div>
             </header> <!-- .site-header -->
@@ -66,12 +66,15 @@
             <main class="main-content">
                 <div class="fullwidth-block">
                     <div class="container text-center">
-                        <h2 class="section-title">The Book of the Passover Angel</h2>
+                        <h2 class="section-title">Księga Anioła Paschalnego</h2>
 
                         <div class="row">
                             <div class="col-md-12 col-sm-6">
                                 <div class="news">
-                                    The Rapture is soon come. Only those who repent before Our Lord will be redeemed. But do not be fooled by the churches preaching the deception of John. The world will be redeemed without Revelation. Sin will be removed from the earth as it was in Egypt before the Exodus. When the stars are right, the Pharaoh will once again pay! Donate to our Church below and we will send you this beautiful book, outlining the truth in the Scripture as revealed to our Reverend Balfour by God's Own Angel.
+                                    Czasy Ostateczne wkrótce nadejdą.<br>
+                                    Tylko ci, którzy pokutują przed Panem, zostaną odkupieni. Ale nie daj się zwieść kościołom głoszącym oszustwo św. Jana. Świat nie zostanie odkupiony wyłącznie przez Objawienie. Na początku grzech zostanie usunięty z ziemi, tak jak było w Egipcie przed Exodusem.<br>
+                                    Kiedy gwiazdy będą w odpowiedniej pozycji, tyrani tego świata poznają Gniew Pański!
+                                    <p>Przekaż darowiznę na rzecz naszego Kościoła poniżej, a my wyślemy Ci tę piękną książkę, przedstawiającą prawdę w Piśmie Świętym, objawioną naszemu wielebnemu o. Balforowi przez Anioła Bożego.</p>
                                 </div>
                             </div>
                             <div class="col-md-12 col-sm-6">
@@ -98,26 +101,25 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="widget">
-                                <h3 class="widget-title">Our address</h3>
-                                <p>There is but one Church in which men find salvation, just as outside the ark of Noah it was not possible for anyone to be saved. (Thomas Aquinas)</p>
+                                <h3 class="widget-title">Nasz Adres</h3>
+                                <p>Ponieważ nie ma zbawienia bez Chrystusa,<br> a my nie poznajemy Chrystusa bez Kościoła, oznacza to,<br> że NIE MA ZBAWIENIA BEZ KOŚCIOŁA -Tomasz z Akwinu</p>
                                 <ul class="address">
-                                    <li><i class="fa fa-map-marker"></i> 1313 Mockingbird Ln, Cleveland, OH 44106</li>
-                                    <li><i class="fa fa-phone"></i> (216) 555 0180</li>
-                                    <li><i class="fa fa-envelope"></i> info@passoverangel.com</li>
+                                    <li><i class="fa fa-map-marker"></i> Matemblewska 44B, Gdańsk 80-294, Polska</li>
+                                    <li><i class="fa fa-envelope"></i> kontakt@kosciol.aniolpaschalny.pl</li>
                                 </ul>
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="widget text-center">
-                                <h2 class="widget-title">Free Gift With Donation!</h2>
-                                <a href="/book.html"><img src="images/book_thumb.png"></a>
-                                <p><strong>$29.95</strong></p>
+                                <h2 class="widget-title">Otrzymaj Orędzie Pana<br> za skromny datek</h2>
+                                <a href="book.html"><img src="images/book_thumb.png"></a>
+                                <p><strong>40.99zł</strong></p>
                                 <img src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/btn_donate_cc_147x47.png" alt="Donate">
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="widget">
-                                <h3 class="widget-title">Contact form</h3>
+                                <h3 class="widget-title"><a name="contact">Formularz kontaktowy</a></h3>
                                 <form action="#" class="contact-form">
                                     <div class="row">
                                         <div class="col-md-6"><input type="text" placeholder="Your name..."></div>
@@ -130,7 +132,7 @@
                         </div>
                     </div> <!-- .row -->
 
-                    <p class="colophon">Copyright <span class="year-0"></span> Church of the Passover Angel. All right reserved</p>
+                    <p class="colophon">Copyright <span class="year-0"></span> Kościoł Anioła Paschalnego. All right reserved</p>
                 </div><!-- .container -->
             </footer> <!-- .site-footer -->
         </div>
