--- a/book.html
+++ b/book.html
@@ -71,10 +71,10 @@
                         <div class="row">
                             <div class="col-md-12 col-sm-6">
                                 <div class="news">
-                                    Czasy Ostateczne wkrótce nadejdą.<br>
+                                    <p>Czasy Ostateczne wkrótce nadejdą.<br>
                                     Tylko ci, którzy pokutują przed Panem, zostaną odkupieni. Ale nie daj się zwieść kościołom głoszącym oszustwo św. Jana. Świat nie zostanie odkupiony wyłącznie przez Objawienie. Na początku grzech zostanie usunięty z ziemi, tak jak było w Egipcie przed Exodusem.<br>
-                                    Kiedy gwiazdy będą w odpowiedniej pozycji, tyrani tego świata poznają Gniew Pański!
-                                    <p>Przekaż darowiznę na rzecz naszego Kościoła poniżej, a my wyślemy Ci tę piękną książkę, przedstawiającą prawdę w Piśmie Świętym, objawioną naszemu wielebnemu o. Balforowi przez Anioła Bożego.</p>
+                                    Kiedy gwiazdy będą w odpowiedniej pozycji, tyrani tego świata poznają Gniew Pański!</p>
+                                    
                                 </div>
                             </div>
                             <div class="col-md-12 col-sm-6">
@@ -82,7 +82,8 @@
                             </div>
                             <div class="col-md-12 col-sm-6">
                                 <div class="news">
-                                    We are a small church that lives on the donations of our flock. We thank you so much for your continued support.  Know that the time is coming when we will do away with these false idols of money and material goods and live in together in the Kingdom. This is a small price to pay for the salvation when weighed against that of your immortal soul.
+                                    <p>Przekaż darowiznę na rzecz naszego Kościoła poniżej, a my wyślemy Ci tę piękną książkę, przedstawiającą prawdę w Piśmie Świętym, objawioną naszemu wielebnemu o. Balforowi przez Anioła Bożego.</p>
+                                    <p>Jest to niewielka cena za zbawienie, w porównaniu z ceną nieśmiertelnej duszy.</p>
                                 </div>
                             </div>
                             <div class="col-md-12 col-sm-6">
