--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
                         <div class="row">
                             <div class="col-md-12 col-sm-6">
                                 <div class="news">
-                                    <p>Jesteśmy małym, fundamentalistycznym Kościołem, oddanym całkowicie woli Boga i jego herolda, Anioła Paschy. Nie należymy do żadnej określnej denominacji, ponieważ naszym bezpośrednim zwierzchnikiem jest sam Pan.
+                                    <p>Jesteśmy małym, fundamentalistycznym Kościołem, oddanym całkowicie woli Boga i jego herolda, Anioła Paschy. Nie należymy do żadnej określnej denominacji, ponieważ naszym bezpośrednim zwierzchnikiem jest sam Pan. Obwołujemy wolność od używek i przywiązań tego świata.
 
 <br><br>Wierzymy, że Czasy Ostateczne są bliskie. Wkrótce Bóg powróci na świa poprzez swojego posłańca, Anioła Paschy, aby oczyścić świat z grzechu i przywrócić sprawiedliwość.
 
