--- a/sermons.html
+++ b/sermons.html
@@ -213,7 +213,7 @@
 								    	<div class="panel-heading" role="tab" id="headingSix">
 								      		<h4 class="panel-title text-center">
 								        		<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" name="sermonSix" href="#sermonSix" aria-expanded="false" aria-controls="sermonSix">
-								          			Naznaczeni przez Pana - 22 PAŹ <span class="year-3"></span>
+								          			Niewolnicy Przyjemności - 22 PAŹ <span class="year-3"></span>
 								        		</a>
 								      		</h4>
 								    	</div>
@@ -225,25 +225,11 @@
 													By Evang. G. E. McTyre, Evangelist Evang. G. E., BHG McTyre BA
 
 													https://books.google.com/books?id=KWZ5GGXo_EMC&lpg=PA340&dq=religious%20right%20sermons&pg=PA340#v=onepage&q&f=false
-												--><h3>Wersja Angielska:</h3>
+												-->
 
-												<p>There are two you's. One is the flesh, and the other is the spirit. The flesh you, is on the left side, while the spirit you, is on the right. The two, are each battling for the highest position on their respective sides, and if one gets what it wants, then that puts the other, at its lowest point.</p>
-
-												<p>Man, being the creature he is, seeks to have the best of both positions, but realizing that he can't, he tries to settle for being middle ground with both. He doesn't want to be too holy, because he woudl look bad, to the world, and he doesn't want to be too worldly, because that woulld mean he wasn't pleasing to God.</p>
-
-												<p>But, you see, to God, a person that seeks to get as close to Him as they can, gets blessed more than the one that seeks to stay neutral. And besdies that, the one that stays neutral, might just as well not be trying to be pleasing in His sight, because he is not really committing himself to God, all because he wants that friendship with the world.</p>
-
-												<p>You see, the world is lost. They are seeking to make them feel fulfilled. That is why they drink. That is why they do drugs. That is why they involve themselves in all sorts of sexual sin. That is why they lie, steal and gamble. They are looking for satisfaction, and some sense of peace of mind.</p>
-
-												<p>Jesus gave us power, 'Luke 10:19 Behold, I give unto you power to tread on serpents and scorpions, and over all the power of the enemy: and nothing shalll by any means hurt you' to accomplish things that the world needs to see and experience, to know that God is real.</p>
-
-												<p>We are the example to the ungodly, of who He is. And many of us are just dropping the ball.</p>
-
-												<p>The bible says, 'Isa 10:27 And it shall come to pass in that day, that his burden shall be taken away from off thy shoulder, and his yoke from off thy neck, and the yoke shall be destroyed because of the anointing.' To put it more simply, if they are not annointed by God, then there is no power in them to break the yokes of bondage to sin and therefore no delilverance for the people.</p>
-
-												<p>Some will say, 'but these are ministers, pastors, and bishops that you are talking about.' That's right. But just because they are doesn't mean they are God's ministers. '2 Cor 11:13 For such are false apostles, deceitful workers, transforming themselves into the apostles of Christ. 2 Cor 11:14 And no marvel; for Satan himself is transformed into an angel of light. 2 Cor 11:15 Therefore it is no great thing if his ministers also be transformed as the ministers of righteousness; whose end shall be according to their works.'  Just because a man has a title in a supposed church does not mean they are annointed by God. A 100% dyed in the wool atheist can become a pastor or bishop if they follow all of the procedures necessary to obtain that position in a particular church or denomination. They can go to college, and get a degree, and in the minds of the world that is all that is needed. So they get their degree from the world and think they are qualified to speak for a God that they don't even believe exists.</p>
-
-												<p>Those of you who have heard by sermons know the difference. Those of you who have read <a href="book.html">The Book of the Passover Angel</a> know the difference. You know the Truth Faith of Our Lord. Do not be deceived by the False Church - God has revealed to us the true Path to Salvation! We are truly Annointed By God!</p>
+												<p>Wszystko bowiem, co jest na świecie – pożądliwość ciała, pożądliwość oczu i pycha życia – nie pochodzi od Ojca, ale od świata.<br>I Jana 2:16 </p>
+												<p>Dzisiejszy świat chce waszego zepsucia. Używki - alkohol, papierosy, narkotyki - mają zatruć wasz umysł. Oślepić wasze zmysły na Znaki Jego nadejścia. Ci, którzy przeczytali <a href="book.html">Księgę Anioła Paschalnego</a> wiedzą, że prawda i spełnienie jest tylko w Bogu!</p>
+												<p><br>Jeśli więc Syn was wyzwoli, będziecie prawdziwie wolni. (J 8:36)</p>
 								      		</div>
 								    	</div>
 								  	</div>
