--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 			od człowieka aż do bydła i odbędę sąd nad wszystkimi bogami Egiptu<br>
 			    <strong>Ja</strong>, Pan.
                     </p>
-                    <h3 class="text-center">To czas ostateczny! Pojednaj się z Panem, bo on jest sprawiedliwy!</h3>
+                    <h3 class="text-center">To czas ostateczny!</h3>
+			<h3></h3>Porzuć przyjemności doczesne i pojednaj się z Panem, bo on jest sprawiedliwy!</h3>
                 </div>
             </div>
 
@@ -101,8 +102,8 @@
 							<div class="col-md-3 col-sm-6">
 								<div class="news">
 									<image class="news-image" src="images/news-thumb-3.jpg"></image>
-									<h3 class="news-title"><a href="sermons.html#sermonThree">Anioł Zemsty</a></h3>
-									<small class="date"><i class="fa fa-calendar"></i>01 sty <span class="year-0"></span></small>
+									<h3 class="news-title"><a href="sermons.html#sermonThree">Niewolnicy Przyjemności</a></h3>
+									<small class="date"><i class="fa fa-calendar"></i>22 paź <span class="year-2"></span></small>
 								</div>
 							</div>
 							<div class="col-md-3 col-sm-6">
